crates/pgls_pretty_print/tests/snapshots/multi/tests__tidscan_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/tidscan_60.sql
snapshot_kind: text
---
CREATE TABLE tidscan ( id INT );

INSERT INTO tidscan VALUES (1), (2), (3);

SELECT ctid, * FROM tidscan;

SELECT ctid, * FROM tidscan WHERE ctid = '(0,1)';

SELECT ctid, * FROM tidscan WHERE ctid = '(0,1)';

SELECT ctid, * FROM tidscan WHERE '(0,1)' = ctid;

SELECT ctid, * FROM tidscan WHERE '(0,1)' = ctid;

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid =
  '(0,2)' OR
  '(0,1)' =
  ctid;

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid =
  '(0,2)' OR
  '(0,1)' =
  ctid;

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid = ANY (CAST(ARRAY['(0,1)',
  '(0,2)']
  AS TID[]));

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid = ANY (CAST(ARRAY['(0,1)',
  '(0,2)']
  AS TID[]));

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid <> ANY (CAST(ARRAY['(0,1)',
  '(0,2)']
  AS TID[]));

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid <> ANY (CAST(ARRAY['(0,1)',
  '(0,2)']
  AS TID[]));

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  id =
  3 AND
  ctid IN ('(0,2)',
  '(0,3)') OR
  ctid =
  '(0,1)' AND
  id =
  1;

SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  id =
  3 AND
  ctid IN ('(0,2)',
  '(0,3)') OR
  ctid =
  '(0,1)' AND
  id =
  1;

SET enable_hashjoin = off;

SELECT
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
FROM
  tidscan
  AS t1
  INNER JOIN tidscan
  AS t2
  ON t1.ctid =
    t2.ctid
WHERE
  t1.id =
  1;

SELECT
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
FROM
  tidscan
  AS t1
  INNER JOIN tidscan
  AS t2
  ON t1.ctid =
    t2.ctid
WHERE
  t1.id =
  1;

SELECT
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
FROM
  tidscan
  AS t1
  LEFT OUTER JOIN tidscan
  AS t2
  ON t1.ctid =
    t2.ctid
WHERE
  t1.id =
  1;

SELECT
  t1.ctid,
  t1.*,
  t2.ctid,
  t2.*
FROM
  tidscan
  AS t1
  LEFT OUTER JOIN tidscan
  AS t2
  ON t1.ctid =
    t2.ctid
WHERE
  t1.id =
  1;

RESET enable_hashjoin;

BEGIN;

DECLARE "c" CURSOR FOR SELECT
  ctid,
  *
FROM
  tidscan
WHERE
  ctid = ANY (CAST(ARRAY['(0,1)',
  '(0,2)']
  AS TID[]));;

FETCH FORWARD ALL FROM c;

FETCH PRIOR FROM c;

FETCH ABSOLUTE 1 FROM c;

ROLLBACK;

BEGIN;

DECLARE "c" CURSOR FOR SELECT ctid, * FROM tidscan;;

FETCH NEXT FROM c;

FETCH NEXT FROM c;

UPDATE tidscan SET id = -id WHERE CURRENT OF c RETURNING *;

FETCH NEXT FROM c;

UPDATE tidscan SET id = -id WHERE CURRENT OF c RETURNING *;

SELECT * FROM tidscan;

FETCH NEXT FROM c;

UPDATE tidscan SET id = -id WHERE CURRENT OF c RETURNING *;

ROLLBACK;

SELECT
  COUNT(
  *
  )
FROM
  tenk1
  AS t1
  INNER JOIN tenk1
  AS t2
  ON t1.ctid =
    t2.ctid;

SELECT
  COUNT(
  *
  )
FROM
  tenk1
  AS t1
  INNER JOIN tenk1
  AS t2
  ON t1.ctid =
    t2.ctid;

SET enable_hashjoin = off;

SELECT
  COUNT(
  *
  )
FROM
  tenk1
  AS t1
  INNER JOIN tenk1
  AS t2
  ON t1.ctid =
    t2.ctid;

SELECT
  COUNT(
  *
  )
FROM
  tenk1
  AS t1
  INNER JOIN tenk1
  AS t2
  ON t1.ctid =
    t2.ctid;

RESET enable_hashjoin;

BEGIN ISOLATION LEVEL SERIALIZABLE;

SELECT * FROM tidscan WHERE ctid = '(0,1)';

SELECT
  locktype,
  mode
FROM
  pg_locks
WHERE
  pid =
  pg_backend_pid(

  ) AND
  mode =
  'SIReadLock';

ROLLBACK;

DROP TABLE "tidscan";
